CustomerServiceImpl.java refatorado