@@ -1,78 +1,74 @@
 package io.sertaoBit.odontocore.crm.modules.funnel.service.impl;
 
+import io.sertaoBit.odontocore.crm.config.security.SecurityUtils;
+import io.sertaoBit.odontocore.crm.exception.ResourceNotFoundException;
 import io.sertaoBit.odontocore.crm.modules.funnel.api.dto.request.customer.CustomerCreateRequestDTO;
 import io.sertaoBit.odontocore.crm.modules.funnel.api.dto.request.customer.CustomerUpdateRequestDTO;
 import io.sertaoBit.odontocore.crm.modules.funnel.api.dto.response.CustomerResponseDTO;
 import io.sertaoBit.odontocore.crm.modules.funnel.domain.model.Customer;
 import io.sertaoBit.odontocore.crm.modules.funnel.mapper.CustomerMapper;
 import io.sertaoBit.odontocore.crm.modules.funnel.repository.CustomerRepository;
-import io.sertaoBit.odontocore.crm.modules.funnel.repository.LeadTicketRepository;
 import io.sertaoBit.odontocore.crm.modules.funnel.service.CustomerService;
-import io.sertaoBit.odontocore.crm.modules.identity.domain.model.User;
-import io.sertaoBit.odontocore.crm.modules.identity.repository.UserRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
-
+@Service
 public class CustomerServiceImpl implements CustomerService {
 
     private final CustomerRepository customerRepository;
     private final CustomerMapper customerMapper;
-    private final UserRepository userRepository;
-    private final LeadTicketRepository securityUtils;
+    private final SecurityUtils  securityUtils;
 
-    public CustomerServiceImpl(CustomerRepository customerRepository,
-                               CustomerMapper customerMapper,
-                               UserRepository userRepository,
-                               IDepartmentRepository departmentRepository,
-                               LeadTicketRepository securityUtils
+    public CustomerServiceImpl(
+            CustomerRepository customerRepository,
+            CustomerMapper customerMapper,
+             SecurityUtils securityUtils
     ) {
         this.customerRepository = customerRepository;
         this.customerMapper = customerMapper;
-        this.userRepository = userRepository;
-        this.departmentRepository = departmentRepository;
         this.securityUtils = securityUtils;
+
     }
 
 
     @Override
     @Transactional
     public CustomerResponseDTO create(CustomerCreateRequestDTO dto) {
-        Department department = departmentRepository.findById(dto.departmentId())
-                .orElseThrow(() -> new RuntimeException("User not found by id: " + dto.departmentId()));
-        User currentUser = (User) departmentRepository.findAll().stream().map(Department::getPermissions);
+        var createdBy = securityUtils.getCurrentUserId();
 
-        Customer customer = customerMapper.toEntity(dto);
-        customer.setDepartment(department);
-        customer.setCreatedByUser(currentUser);
+          Customer  customer = Customer.builder()
+                    .name(dto.name())
+                    .cpf(dto.cpf())
+                    .phone(dto.phone())
+                    .email(dto.email())
+                    .source(dto.source())
+                    .adChannel(dto.adChannel())
+                    .adCampaign(dto.adCampaign())
+                    .createdBy(createdBy)
+                    .referredBy(dto.referredBy())
+                    .build();
+            return customerMapper.toResponseDTO(customerRepository.save(customer));
 
-        return customerMapper.toResponseDTO(customerRepository.save(customer));
     }
 
     @Override
     @Transactional
-    public CustomerResponseDTO update(String cpf, CustomerUpdateRequestDTO dto) {
-        Customer customer = customerRepository.findByCpf(cpf)
-                .orElseThrow(() -> new RuntimeException("Customer not found " + cpf));
+    public CustomerResponseDTO update(UUID id, CustomerUpdateRequestDTO dto) {
+        Customer customer = customerRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Customer not found " + id));
 
         if (!customer.getCpf().equals(dto.cpf()) && customerRepository.findByCpf(dto.cpf())
                 .isPresent()) {
-            throw new RuntimeException("O novo CPF informado  " + dto.cpf() + " já pertence a outro cliente");
+            throw new RuntimeException("O novo CPF informado  " + dto.cpf() + " já existe na base de dados");
         }
-
         customer.setName(dto.name());
         customer.setCpf(dto.cpf());
-        customer.setTelephone(dto.telephone());
-        customer.setCity(dto.city());
-        customer.setAddress(dto.address());
-        customer.setDescriptions(Collections.singletonList(dto.description()));
-        customer.setTicketStatus(dto.ticketStatus());
-
+        customer.setEmail(dto.email());
+        customer.setPhone(dto.phone());
         return customerMapper.toResponseDTO(customerRepository.save(customer));
     }
 
@@ -81,7 +77,7 @@ public class CustomerServiceImpl implements CustomerService {
     public List<CustomerResponseDTO> findAll() {
         return customerRepository.findAll().stream()
                 .map(customerMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -97,7 +93,7 @@ public class CustomerServiceImpl implements CustomerService {
     public List<CustomerResponseDTO> findByName(String name) {
         return customerRepository.findByNameContainingIgnoreCase(name).stream()
                 .map(customerMapper::toResponseDTO)
-                .collect(Collectors.toList());
+               .toList();
     }
 
     @Override
@@ -109,9 +105,10 @@ public class CustomerServiceImpl implements CustomerService {
     }
 
     @Override
+    @Transactional
     public void deleteById(UUID id) {
         if (!customerRepository.existsById(id)) {
-            throw new RuntimeException("Customer not found " + id);
+            throw new ResourceNotFoundException("Customer not found " + id);
         }
         customerRepository.deleteById(id);
     }
